--- a/style.css
+++ b/style.css
@@ -43,10 +43,11 @@ p {
 }
 
 button {
-    background-color: #3882f6;
+    background-color: #3882F6;
     padding: 10px;
     margin-top: 5px;
-    color: #E5E7EB;
+    color: white;
+    font-size: 20px;
 }
 
 h1 {
@@ -87,10 +88,10 @@ h2 {
 /* Updated .boxes container styling */
 .boxes {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     text-align: center;
-    gap: 10px;
-    flex-wrap: wrap;
+    gap: 100px;
+
 }
 
 /* .box-group styling for each box and its paragraph */
@@ -122,9 +123,9 @@ h2 {
 }
 
 .quote {
-    font-size: 3rem;
+    font-size: 36px;
     font-style: italic;
-    color: #333; /* Darker color for the quote */
+    color: #1F2937; /* Darker color for the quote */
     margin-bottom: 10px; /* Space between the quote and the author's name */
     max-width: 60%;
 }
@@ -138,14 +139,65 @@ h2 {
     padding: 5rem;
     margin: 0 auto; /* Center the container itself */
     border: 1px solid #ddd; /* Optional border for visualization */
-    background-color: #f9f9f9; /* Light background color */
+    background-color: #E5E7EB; /* Light background color */
 }
 
 h3 {
     font-size: 32px;
-    color: black 
+    color: black;
     margin-left: 20px; /* Offset the author to the right */
     align-self: flex-end;
     margin-right: 25rem;
     font-weight: 900;
+}
+.Cta {
+    height: 300px; /* Maintain the height of the section */
+}
+
+.cta-signup {
+    padding: 4rem;
+    display: flex; /* Use flexbox for layout */
+    flex-direction: row; /* Arrange items in a row */
+    background-color: #3882F6; /* Background color */
+    justify-content: space-between; /* Space between text and button */
+    align-items: center; /* Center items vertically */
+    color: white;
+    max-width: 70%;
+    margin: 0 auto;
+    margin-top: 5rem;
+    font-size: 40px;
+
+}
+
+.signup-text {
+    /* Flexbox settings to allow it to take available space */
+    flex: 1; /* Allow text to take up available space */
+    margin-right: 20px; /* Add space between text and button */
+}
+
+.signup2 {
+    color: white;
+    border-color: white;
+    font-size: 30px;
+    border-radius: 12px;
+    font-weight: bold;
+    text-align: center;
+    padding: 1rem;
+}
+
+.signup-p {
+    font-size: 20px;
+}
+
+.footer {
+    height: 100px;
+    color: white;
+    display: flex; /* Use flexbox for centering */
+    justify-content: center; /* Center content horizontally */
+    align-items: center; /* Center content vertically */
+}
+
+.footer-text {
+    margin: 0; /* Remove default margin */
+    padding: 0; /* Remove any padding */
 }
